--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,5 @@
-﻿absl-py==1.4.0
-aiohttp==3.8.5
-aiosignal==1.3.1
-anyio==3.6.2
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==23.1.0
-beautifulsoup4==4.12.2
-bs4==0.0.1
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
-dataclasses-json==0.5.13
-fastapi==0.95.0
-fire==0.5.0
-flatbuffers==23.3.3
-fonttools==4.39.2
-frozenlist==1.4.0
-gast==0.4.0
-google-auth==2.16.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.51.3
-gunicorn==20.1.0
-h11==0.14.0
-h5py==3.8.0
-httptools==0.6.0
-idna==3.4
-jax==0.4.6
-keras==2.12.0
-kiwisolver==1.4.4
-langchain==0.0.230
-langchainplus-sdk==0.0.20
-langcorn==0.0.12
-libclang==16.0.0
-loguru==0.7.0
-Markdown==3.4.3
-MarkupSafe==2.1.2
-marshmallow==3.20.1
-matplotlib==3.7.1
-multidict==6.0.4
-mypy-extensions==1.0.0
-numexpr==2.8.4
-numpy==1.23.5
-oauthlib==3.2.2
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
-opt-einsum==3.3.0
-packaging==23.0
-Pillow==9.4.0
-protobuf==4.22.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pydantic==1.10.7
-pyparsing==3.0.9
-PyYAML==6.0.1
-requests==2.28.2
-requests-oauthlib==1.3.1
-rsa==4.9
-scipy==1.10.1
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.19
-starlette==0.26.1
-tenacity==8.2.2
-termcolor==2.2.0
-tqdm==4.65.0
-typing-inspect==0.9.0
-typing_extensions==4.5.0
-urllib3==1.26.15
-uvicorn==0.21.1
-watchfiles==0.19.0
-websockets==11.0.3
-Werkzeug==2.2.3
-win32-setctime==1.1.0
-wrapt==1.14.1
-yarl==1.9.2
+fastapi==0.88.0
+pytest==7.1.3
+pytest-asyncio==0.20.3
+uvicorn==0.20.0
+pydantic~=1.10.4
